# insurance_test

./: .gitignore  AGENT_REGISTRY_FEATURES.md  AZURE_EMAIL_DOMAIN_SETUP.md  CHAT_INTEGRATION_SUMMARY.md  COMMIT_MILESTONE.md  COMMUNICATION_AGENT_SUMMARY.md  VISION_ROADMAP.md  check_steps.py  cleanup_test_files.ps1  comprehensive_test.py  debug_dashboard_import.py  debug_steps_data.py  demo_workflow.md  explore_cosmos.py  insurance_setup.md  mock_mcp_server.py  populate_rules.py  populate_test_data.py  setup.md  setup_cosmos_db.py  simple_mcp_server.py  start_agents.bat  start_insurance_with_chat.py  start_mcp_server.bat  test_chat_integration.py  test_complete_workflow.py  test_cosmos_scenarios.py  test_dashboard_api.py  test_dashboard_import.py  test_direct_agents.py  test_enhanced_processing.py  test_fixes.md  test_processing_steps_api.py  test_processing_steps_ui.py  test_recent_workflow_steps.py  test_workflow_logger_integration.py  verify_orchestrator_workflow.py
Docs/: agent_runs.csv  artifacts.csv  claims.csv  events.csv  extractions_files.jsonl  extractions_summary.jsonl  rules_catalog.csv  rules_eval.csv  threads.csv
agent_registry_dashboard/: README.md  app.py  requirements.txt
azure-cosmos-mcp-server-samples/: README.md
client_live_voice/: .gitignore  (+5 more)
remote_agents/cosmos_query_agent/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
remote_agents/time_agent/: .env.example  README.md  __main__.py  agent.py  agent_backup.py  agent_direct_cosmos.py  agent_executor.py  agent_with_direct_cosmos.py  direct_cosmos_logger.py  pyproject.toml
(+249 files in other folders)
